FDG-11287 fix to header alignment

--- a/src/components/social-share/social-share.module.scss
+++ b/src/components/social-share/social-share.module.scss
@@ -24,6 +24,7 @@
   .headerText {
     font-size: $font-size-16;
     margin: 0 0 0.75rem;
+    text-align: left;
   }
 }
 
